--- a/Clustering_of_Wholesale_Customers.ipynb
+++ b/Clustering_of_Wholesale_Customers.ipynb
@@ -6,11 +6,69 @@
    "source": [
     "# Clustering of Wholesale Customers"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 440 entries, 0 to 439\n",
+      "Data columns (total 8 columns):\n",
+      " #   Column            Non-Null Count  Dtype\n",
+      "---  ------            --------------  -----\n",
+      " 0   Channel           440 non-null    int64\n",
+      " 1   Region            440 non-null    int64\n",
+      " 2   Fresh             440 non-null    int64\n",
+      " 3   Milk              440 non-null    int64\n",
+      " 4   Grocery           440 non-null    int64\n",
+      " 5   Frozen            440 non-null    int64\n",
+      " 6   Detergents_Paper  440 non-null    int64\n",
+      " 7   Delicassen        440 non-null    int64\n",
+      "dtypes: int64(8)\n",
+      "memory usage: 27.6 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "wholesale_customer_data_csv = pd.read_csv('Wholesale_customers_data.csv',sep=',')\n",
+    "dataset = wholesale_customer_data_csv\n",
+    "dataset.info()"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
