added improvement idea

--- a/Clustering_of_Travel_Reviews.ipynb
+++ b/Clustering_of_Travel_Reviews.ipynb
@@ -1082,7 +1082,8 @@
    "source": [
     "## Improvements\n",
     "- Add different clustering algorithms, not only KMeans\n",
-    "- Using np.log on skewed features. "
+    "- Using np.log on skewed features.\n",
+    "- Experimented more with PCA components "
    ]
   },
   {
