--- a/Clustering_of_Travel_Reviews.ipynb
+++ b/Clustering_of_Travel_Reviews.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 115,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-15T17:59:46.385560300Z",
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 116,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-15T17:59:46.432067500Z",
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 117,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-15T17:59:46.659575200Z",
@@ -218,7 +218,7 @@
        "4          3.18     2.78     1.18                     2.54  "
       ]
      },
-     "execution_count": 110,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 118,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-15T17:59:46.777296700Z",
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 119,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-15T17:59:47.101611300Z",
@@ -327,21 +327,12 @@
     "collapsed": false
    },
    "source": [
-    "There is a pretty poor correlation between data points. There seems that several features are skewed. We can attempt to remove some noise and reduce the data by using PCA(Principal Component Analysis)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
-   "source": [
     "## Histogram"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 120,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-15T17:59:49.264619700Z",
@@ -388,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 121,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-15T17:59:51.895839500Z",
@@ -441,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 122,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-15T17:59:51.905730800Z",
@@ -466,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 123,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-15T17:59:52.329938400Z",
@@ -505,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 124,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-15T17:59:52.329938400Z",
@@ -520,7 +511,7 @@
        "(980, 6)"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 125,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-15T17:59:53.006456600Z",
@@ -568,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 126,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-15T17:59:53.017625800Z",
@@ -583,7 +574,7 @@
        "(980, 7)"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 127,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-15T17:59:53.990420400Z",
@@ -645,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -700,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 129,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-15T17:59:54.261940700Z",
@@ -788,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -864,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 131,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-15T17:59:56.132079100Z",
@@ -947,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 132,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-15T17:59:57.167203700Z",
@@ -1028,8 +1019,9 @@
     "\n",
     "### What are the metrics we are looking at?\n",
     "\n",
-    "- Davies-Bouldin Score: Tells us how well clusters are separated by considering the ratio of how tight the clusters are to how far apart the clusters are.\n",
     "- Silhouette Score measures how similar an object is to its own cluster compared to other clusters. This can help with an overall overview over how well data points are clustered.\n",
+    "\n",
+    "- Davies-Bouldin Score: Tells us how well clusters are separated by considering the ratio of how tight the clusters are to how far apart the clusters are.\n",
     "\n",
     "### The results\n",
     "\n",
@@ -1053,27 +1045,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 133,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Cluster\n",
+       " 0    726\n",
+       "-1    246\n",
+       " 1      4\n",
+       " 2      4\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "dbscan1 = DBSCAN(eps=0.5, min_samples=5)\n"
+    "dbscan1 = DBSCAN(eps=0.5, min_samples=5)\n",
+    "predicted_labels1 = dbscan1.fit_predict(pca_dataset_reduced)\n",
+    "\n",
+    "dataset['Cluster'] = predicted_labels1\n",
+    "dataset['Cluster'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 134,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Silhouette Score: -0.11335282345772428\n",
+      "Davies-Bouldin Index: 4.1671190625750345\n"
+     ]
+    }
+   ],
    "source": [
-    "clusters = dbscan1.fit_predict(dataset)"
+    "sil_score = silhouette_score(pca_dataset_reduced[predicted_labels1 != -1], predicted_labels1[predicted_labels1 != -1])\n",
+    "print(f'Silhouette Score: {sil_score}')\n",
+    "\n",
+    "dbi = davies_bouldin_score(pca_dataset_reduced, predicted_labels1)\n",
+    "print(f'Davies-Bouldin Index: {dbi}')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Conclusion"
+    "## Manually tuning the hyperparameters by observing the cluster value counts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Cluster\n",
+       "-1    824\n",
+       " 0    139\n",
+       " 1     17\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dbscan2 = DBSCAN(eps=0.41, min_samples=16)\n",
+    "predicted_labels2 = dbscan2.fit_predict(pca_dataset_reduced)\n",
+    "\n",
+    "dataset['Cluster'] = predicted_labels2\n",
+    "dataset['Cluster'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Silhouette Score: 0.6180231383601393\n",
+      "Davies-Bouldin Index: 1.8366147817250338\n"
+     ]
+    }
+   ],
+   "source": [
+    "sil_score = silhouette_score(pca_dataset_reduced[predicted_labels2 != -1], predicted_labels2[predicted_labels2 != -1])\n",
+    "print(f'Silhouette Score: {sil_score}')\n",
+    "\n",
+    "dbi = davies_bouldin_score(pca_dataset_reduced, predicted_labels2)\n",
+    "print(f'Davies-Bouldin Index: {dbi}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Discussing the results of the DBScan\n",
+    "\n",
+    "There \n",
+    "\n",
+    "### The results\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Conclusion\n",
+    "\n",
+    "The way the results have been formed has been nothing more than suboptimal. \n",
+    "\n",
+    "The approach for understanding, correlating, and tuning is coherently flawed.\n",
+    "\n",
+    "Dealing with no ground truths when clustering is difficult."
    ]
   },
   {
@@ -1081,9 +1181,10 @@
    "metadata": {},
    "source": [
     "## Improvements\n",
-    "- Add different clustering algorithms, not only KMeans\n",
+    "- Add different clustering algorithms\n",
     "- Using np.log on skewed features.\n",
-    "- Experimented more with PCA components "
+    "- Experimented more with PCA components \n",
+    "- Make loops for each hyperparameter to look for the optimal values for each of them"
    ]
   },
   {
@@ -1095,7 +1196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1110,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 138,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-15T17:59:57.167203700Z",
@@ -1138,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 139,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-15T17:59:57.168203900Z",
@@ -1158,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1183,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1208,7 +1309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
