--- a/Clustering_of_Travel_Reviews.ipynb
+++ b/Clustering_of_Travel_Reviews.ipynb
@@ -43,11 +43,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 134,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-16T16:36:03.517210700Z",
-     "start_time": "2024-10-16T16:36:03.305857600Z"
+     "end_time": "2024-10-16T17:07:37.684507900Z",
+     "start_time": "2024-10-16T17:07:37.339723400Z"
     }
    },
    "outputs": [],
@@ -65,12 +65,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 135,
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-16T16:36:03.538133800Z",
-     "start_time": "2024-10-16T16:36:03.309176800Z"
+     "end_time": "2024-10-16T17:07:37.872601800Z",
+     "start_time": "2024-10-16T17:07:37.351258800Z"
     }
    },
    "outputs": [],
@@ -91,11 +91,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 136,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-16T16:36:03.539147300Z",
-     "start_time": "2024-10-16T16:36:03.318517500Z"
+     "end_time": "2024-10-16T17:07:37.875836200Z",
+     "start_time": "2024-10-16T17:07:37.362499400Z"
     }
    },
    "outputs": [
@@ -104,7 +104,7 @@
       "text/plain": "   Art galleries  Dance clubs  Juice bars  Restaurants  Museums  Resorts  \\\n0           0.93          1.8        2.29         0.62     0.80     2.42   \n1           1.02          2.2        2.66         0.64     1.42     3.18   \n2           1.22          0.8        0.54         0.53     0.24     1.54   \n3           0.45          1.8        0.29         0.57     0.46     1.52   \n4           0.51          1.2        1.18         0.57     1.54     2.02   \n\n   Parks/Picnic  Beaches  Theater  Religious institutions   \n0          3.19     2.79     1.82                     2.42  \n1          3.21     2.63     1.86                     2.32  \n2          3.18     2.80     1.31                     2.50  \n3          3.18     2.96     1.57                     2.86  \n4          3.18     2.78     1.18                     2.54  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Art galleries</th>\n      <th>Dance clubs</th>\n      <th>Juice bars</th>\n      <th>Restaurants</th>\n      <th>Museums</th>\n      <th>Resorts</th>\n      <th>Parks/Picnic</th>\n      <th>Beaches</th>\n      <th>Theater</th>\n      <th>Religious institutions</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0.93</td>\n      <td>1.8</td>\n      <td>2.29</td>\n      <td>0.62</td>\n      <td>0.80</td>\n      <td>2.42</td>\n      <td>3.19</td>\n      <td>2.79</td>\n      <td>1.82</td>\n      <td>2.42</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1.02</td>\n      <td>2.2</td>\n      <td>2.66</td>\n      <td>0.64</td>\n      <td>1.42</td>\n      <td>3.18</td>\n      <td>3.21</td>\n      <td>2.63</td>\n      <td>1.86</td>\n      <td>2.32</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1.22</td>\n      <td>0.8</td>\n      <td>0.54</td>\n      <td>0.53</td>\n      <td>0.24</td>\n      <td>1.54</td>\n      <td>3.18</td>\n      <td>2.80</td>\n      <td>1.31</td>\n      <td>2.50</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>0.45</td>\n      <td>1.8</td>\n      <td>0.29</td>\n      <td>0.57</td>\n      <td>0.46</td>\n      <td>1.52</td>\n      <td>3.18</td>\n      <td>2.96</td>\n      <td>1.57</td>\n      <td>2.86</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>0.51</td>\n      <td>1.2</td>\n      <td>1.18</td>\n      <td>0.57</td>\n      <td>1.54</td>\n      <td>2.02</td>\n      <td>3.18</td>\n      <td>2.78</td>\n      <td>1.18</td>\n      <td>2.54</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 52,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,12 +128,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 137,
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-16T16:36:03.703870Z",
-     "start_time": "2024-10-16T16:36:03.330747100Z"
+     "end_time": "2024-10-16T17:07:38.082874800Z",
+     "start_time": "2024-10-16T17:07:37.383880600Z"
     }
    },
    "outputs": [
@@ -179,12 +179,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 138,
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-16T16:36:03.914930200Z",
-     "start_time": "2024-10-16T16:36:03.682740100Z"
+     "end_time": "2024-10-16T17:07:38.781459Z",
+     "start_time": "2024-10-16T17:07:37.993730500Z"
     }
    },
    "outputs": [
@@ -213,12 +213,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 139,
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-16T16:36:05.149548200Z",
-     "start_time": "2024-10-16T16:36:03.914930200Z"
+     "end_time": "2024-10-16T17:07:41.003094300Z",
+     "start_time": "2024-10-16T17:07:38.781459Z"
     }
    },
    "outputs": [
@@ -258,12 +258,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 140,
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-16T16:36:06.447373100Z",
-     "start_time": "2024-10-16T16:36:05.150554100Z"
+     "end_time": "2024-10-16T17:07:43.234884600Z",
+     "start_time": "2024-10-16T17:07:41.002089300Z"
     }
    },
    "outputs": [
@@ -309,11 +309,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 141,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-16T16:36:06.453234700Z",
-     "start_time": "2024-10-16T16:36:06.448379300Z"
+     "end_time": "2024-10-16T17:07:43.236381200Z",
+     "start_time": "2024-10-16T17:07:43.199493700Z"
     }
    },
    "outputs": [
@@ -334,11 +334,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 142,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-16T16:36:06.461945400Z",
-     "start_time": "2024-10-16T16:36:06.453741Z"
+     "end_time": "2024-10-16T17:07:43.236381200Z",
+     "start_time": "2024-10-16T17:07:43.209821500Z"
     }
    },
    "outputs": [
@@ -373,12 +373,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 143,
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-16T16:36:06.470053400Z",
-     "start_time": "2024-10-16T16:36:06.461945400Z"
+     "end_time": "2024-10-16T17:07:43.236381200Z",
+     "start_time": "2024-10-16T17:07:43.218994400Z"
     }
    },
    "outputs": [
@@ -386,7 +386,7 @@
      "data": {
       "text/plain": "(980, 6)"
      },
-     "execution_count": 59,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,12 +399,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 144,
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-16T16:36:07.169640Z",
-     "start_time": "2024-10-16T16:36:06.468801300Z"
+     "end_time": "2024-10-16T17:07:44.649254400Z",
+     "start_time": "2024-10-16T17:07:43.252734800Z"
     }
    },
    "outputs": [
@@ -432,12 +432,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 145,
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-16T16:36:07.175524600Z",
-     "start_time": "2024-10-16T16:36:07.168612100Z"
+     "end_time": "2024-10-16T17:07:44.650309800Z",
+     "start_time": "2024-10-16T17:07:44.641543100Z"
     }
    },
    "outputs": [
@@ -445,7 +445,7 @@
      "data": {
       "text/plain": "(980, 7)"
      },
-     "execution_count": 61,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,12 +458,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 146,
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-16T16:36:07.885527Z",
-     "start_time": "2024-10-16T16:36:07.177548200Z"
+     "end_time": "2024-10-16T17:07:45.617342200Z",
+     "start_time": "2024-10-16T17:07:44.650309800Z"
     }
    },
    "outputs": [
@@ -505,11 +505,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 147,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-16T16:36:08.246503400Z",
-     "start_time": "2024-10-16T16:36:07.884520100Z"
+     "end_time": "2024-10-16T17:07:46.057283700Z",
+     "start_time": "2024-10-16T17:07:45.618343500Z"
     }
    },
    "outputs": [
@@ -561,12 +561,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 148,
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-16T16:36:08.884382900Z",
-     "start_time": "2024-10-16T16:36:08.213168300Z"
+     "end_time": "2024-10-16T17:07:46.717323900Z",
+     "start_time": "2024-10-16T17:07:46.043366Z"
     }
    },
    "outputs": [
@@ -643,11 +643,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 149,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-16T16:36:09.783095300Z",
-     "start_time": "2024-10-16T16:36:08.886438800Z"
+     "end_time": "2024-10-16T17:07:47.901731400Z",
+     "start_time": "2024-10-16T17:07:46.722022800Z"
     }
    },
    "outputs": [
@@ -736,11 +736,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 150,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-16T16:36:09.968432Z",
-     "start_time": "2024-10-16T16:36:09.784102700Z"
+     "end_time": "2024-10-16T17:07:48.109512400Z",
+     "start_time": "2024-10-16T17:07:47.901731400Z"
     }
    },
    "outputs": [
@@ -819,12 +819,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 151,
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-16T16:36:10.456013100Z",
-     "start_time": "2024-10-16T16:36:09.968937300Z"
+     "end_time": "2024-10-16T17:07:48.743687900Z",
+     "start_time": "2024-10-16T17:07:48.109512400Z"
     }
    },
    "outputs": [
@@ -916,9 +916,9 @@
     "Since there is no ground truth when working with clustering. It's hard to conclude if these results are \"good enough\". But the impression that it's given me is that they are suboptimal.\n",
     "\n",
     "If I have to consider if they would be good enough, the aim would be to have atleast\n",
-    "- for Silhouette score: <= 0.7\n",
+    "- for Silhouette score: <= 0.7 (Since best is 1)\n",
     "\n",
-    "- for Davis-Bouldin score: >= 0.5\n",
+    "- for Davis-Bouldin score: >= 0.5 (Since best is 0)\n",
     "\n"
    ]
   },
@@ -926,16 +926,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# DBSCAN"
+    "# Creating our DBScan cluster"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 152,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-16T16:36:10.469194600Z",
-     "start_time": "2024-10-16T16:36:10.446940Z"
+     "end_time": "2024-10-16T17:07:48.788153400Z",
+     "start_time": "2024-10-16T17:07:48.745693500Z"
     }
    },
    "outputs": [
@@ -943,7 +943,7 @@
      "data": {
       "text/plain": "Cluster\n 0    726\n-1    246\n 1      4\n 2      4\nName: count, dtype: int64"
      },
-     "execution_count": 68,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -958,11 +958,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 153,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-16T16:36:10.513317100Z",
-     "start_time": "2024-10-16T16:36:10.469194600Z"
+     "end_time": "2024-10-16T17:07:48.794122700Z",
+     "start_time": "2024-10-16T17:07:48.770870500Z"
     }
    },
    "outputs": [
@@ -992,11 +992,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 154,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-16T16:36:10.513317100Z",
-     "start_time": "2024-10-16T16:36:10.486539500Z"
+     "end_time": "2024-10-16T17:07:48.810189300Z",
+     "start_time": "2024-10-16T17:07:48.791673300Z"
     }
    },
    "outputs": [
@@ -1004,7 +1004,7 @@
      "data": {
       "text/plain": "Cluster\n-1    970\n 1      6\n 0      4\nName: count, dtype: int64"
      },
-     "execution_count": 70,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1019,11 +1019,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 155,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-16T16:36:10.514322800Z",
-     "start_time": "2024-10-16T16:36:10.502732600Z"
+     "end_time": "2024-10-16T17:07:48.862050100Z",
+     "start_time": "2024-10-16T17:07:48.809188600Z"
     }
    },
    "outputs": [
@@ -1053,7 +1053,10 @@
     "The results from the DBScan has a very good silhouette score. The davies-bouldin index is better\n",
     "\n",
     "### The results\n",
-    "\n"
+    "\n",
+    "### Thoughts\n",
+    "\n",
+    "Noise?\n"
    ]
   },
   {
@@ -1065,8 +1068,12 @@
     "Best Davies-Bouldin score from KMeans\n",
     "\n",
     "### Why DBScan is better on this dataset\n",
+    "Since there has been done more work in trying to find a good model for the KMeans+++\n",
     "\n",
-    "Finding the tunings was based on 'luck'. The tuning was done manually out of intuition\n"
+    "Finding the tunings to the hyperparameters on the DBScan was based on 'luck'. Adjusting manually without any idea of what works or not.\n",
+    "Ideally some graphs that show the results.\n",
+    "\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false
@@ -1103,11 +1110,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 156,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-16T16:36:10.535139600Z",
-     "start_time": "2024-10-16T16:36:10.512445900Z"
+     "end_time": "2024-10-16T17:07:48.874812200Z",
+     "start_time": "2024-10-16T17:07:48.820468800Z"
     }
    },
    "outputs": [],
@@ -1123,11 +1130,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 157,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-16T16:36:10.536027500Z",
-     "start_time": "2024-10-16T16:36:10.515796700Z"
+     "end_time": "2024-10-16T17:07:48.874812200Z",
+     "start_time": "2024-10-16T17:07:48.826905900Z"
     }
    },
    "outputs": [],
@@ -1151,11 +1158,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 158,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-16T16:36:10.536027500Z",
-     "start_time": "2024-10-16T16:36:10.520436900Z"
+     "end_time": "2024-10-16T17:07:48.874812200Z",
+     "start_time": "2024-10-16T17:07:48.832302800Z"
     }
    },
    "outputs": [],
@@ -1171,11 +1178,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 159,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-16T16:36:10.536027500Z",
-     "start_time": "2024-10-16T16:36:10.524783700Z"
+     "end_time": "2024-10-16T17:07:48.874812200Z",
+     "start_time": "2024-10-16T17:07:48.838765800Z"
     }
    },
    "outputs": [],
@@ -1201,11 +1208,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 160,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-16T16:36:10.536027500Z",
-     "start_time": "2024-10-16T16:36:10.530792100Z"
+     "end_time": "2024-10-16T17:07:48.874812200Z",
+     "start_time": "2024-10-16T17:07:48.841774Z"
     }
    },
    "outputs": [],
@@ -1231,11 +1238,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 161,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-16T16:36:10.547859900Z",
-     "start_time": "2024-10-16T16:36:10.535139600Z"
+     "end_time": "2024-10-16T17:07:48.875818100Z",
+     "start_time": "2024-10-16T17:07:48.845770400Z"
     }
    },
    "outputs": [],
