--- a/Clustering_of_Travel_Reviews.ipynb
+++ b/Clustering_of_Travel_Reviews.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 447,
+   "execution_count": 448,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-16T17:07:37.684507900Z",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 419,
+   "execution_count": 449,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-16T17:07:37.872601800Z",
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 420,
+   "execution_count": 450,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-16T17:07:37.875836200Z",
@@ -219,7 +219,7 @@
        "4          3.18     2.78     1.18                     2.54  "
       ]
      },
-     "execution_count": 420,
+     "execution_count": 450,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 421,
+   "execution_count": 451,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-16T17:07:38.082874800Z",
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 422,
+   "execution_count": 452,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-16T17:07:38.781459Z",
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 423,
+   "execution_count": 453,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-16T17:07:41.003094300Z",
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 424,
+   "execution_count": 454,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-16T17:07:43.234884600Z",
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 425,
+   "execution_count": 455,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-16T17:07:43.236381200Z",
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 426,
+   "execution_count": 456,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-16T17:07:43.236381200Z",
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 427,
+   "execution_count": 457,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-16T17:07:43.236381200Z",
@@ -511,7 +511,7 @@
        "(980, 6)"
       ]
      },
-     "execution_count": 427,
+     "execution_count": 457,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 428,
+   "execution_count": 458,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-16T17:07:44.649254400Z",
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 429,
+   "execution_count": 459,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-16T17:07:44.650309800Z",
@@ -574,7 +574,7 @@
        "(980, 7)"
       ]
      },
-     "execution_count": 429,
+     "execution_count": 459,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 430,
+   "execution_count": 460,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-16T17:07:45.617342200Z",
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 431,
+   "execution_count": 461,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-16T17:07:46.057283700Z",
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 432,
+   "execution_count": 462,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-16T17:07:46.717323900Z",
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 433,
+   "execution_count": 463,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-16T17:07:47.901731400Z",
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 434,
+   "execution_count": 464,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-16T17:07:48.109512400Z",
@@ -962,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 435,
+   "execution_count": 465,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-16T17:07:48.743687900Z",
@@ -1074,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 436,
+   "execution_count": 466,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-16T17:07:48.788153400Z",
@@ -1101,7 +1101,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 436,
+     "execution_count": 466,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1116,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 437,
+   "execution_count": 467,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-16T17:07:48.794122700Z",
@@ -1150,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 438,
+   "execution_count": 468,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-16T17:07:48.810189300Z",
@@ -1175,7 +1175,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 438,
+     "execution_count": 468,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1190,7 +1190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 439,
+   "execution_count": 469,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-16T17:07:48.862050100Z",
@@ -1227,8 +1227,8 @@
     "\n",
     "The 'best' results from my model. \n",
     "\n",
-    "Silhouette Score: 0.6178278172059389\n",
-    "Davies-Bouldin Index: 0.626993632057223\n",
+    "Silhouette Score: 0.5967602816657375\n",
+    "Davies-Bouldin Index: 0.7252647450347616\n",
     "\n",
     "but can be misleading due to the amount of noise in the model.\n",
     "\n",
@@ -1297,7 +1297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 440,
+   "execution_count": 470,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-16T17:07:48.874812200Z",
@@ -1310,14 +1310,14 @@
     "skewed_dataset = pd.DataFrame(dataset.copy())\n",
     "skewed_columns = ['Art galleries', 'Dance clubs', 'Juice bars', 'Restaurants']\n",
     "\n",
-    "skewed_dataset[skewed_columns] = np.log(skewed_dataset[skewed_columns] + 1) # Adding + 1 to avoid doing the logarith of 0\n",
+    "skewed_dataset[skewed_columns] = np.log(skewed_dataset[skewed_columns] + 1) # Adding + 1 to avoid doing the logarithm of 0\n",
     "skewed_dataset.hist(figsize=(10,7));\n",
     "''';"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 442,
+   "execution_count": 471,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-16T17:07:48.874812200Z",
@@ -1337,7 +1337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 443,
+   "execution_count": 472,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-16T17:07:48.874812200Z",
@@ -1367,7 +1367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 444,
+   "execution_count": 473,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-16T17:07:48.874812200Z",
@@ -1397,7 +1397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 445,
+   "execution_count": 474,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-16T17:07:48.875818100Z",
