--- a/Clustering_of_Wholesale_Customers.ipynb
+++ b/Clustering_of_Wholesale_Customers.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 172,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-16T16:34:14.842790800Z",
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 173,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-16T16:34:14.852995400Z",
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 174,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-16T16:34:14.857941400Z",
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 175,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-16T16:34:15.032179500Z",
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 176,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-16T16:34:15.281487400Z",
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 177,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-16T16:34:15.449308300Z",
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 178,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-16T16:34:16.219867500Z",
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 179,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-16T16:34:16.223897300Z",
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 180,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-16T16:34:16.740060500Z",
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 181,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-16T16:34:17.027213500Z",
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 182,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-16T16:34:17.222218700Z",
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 183,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-16T16:34:17.231366700Z",
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 184,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-16T16:34:17.251782900Z",
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
@@ -533,15 +533,19 @@
     "\n",
     "#### The internal\n",
     "\n",
-    "The model2 has a overall better performance. This is based on the Davies-Bouldin score being lower than the model1. The \n",
+    "Model 2 is better because its clusters are more compact and well-separated, as shown by the lower Davies-Bouldin score. The difference in silhouette score is so small it doesn't make much of a difference.\n",
     "\n",
     "#### The external\n",
     "\n",
+    "The difference in values are so marginally small that we can conclude that its insignificant.\n",
     "\n",
+    "They are all pretty low which indicates that they are all bad. \n",
+    "\n",
+    "ARI is negative, which indicates that there is bad alignment with any ground truth.\n",
     "\n",
     "### Worth noting\n",
     "\n",
-    "There is not a lot of pre prossesing\n"
+    "There is a lack of pre processing done on the dataset to try out different solutions to produce better results.\n"
    ]
   },
   {
@@ -553,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 187,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-16T16:34:17.310591500Z",
@@ -573,7 +577,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 187,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 290,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-16T16:34:17.310591500Z",
@@ -639,21 +643,20 @@
      "data": {
       "text/plain": [
        "Cluster\n",
-       " 1    201\n",
-       "-1    194\n",
-       " 0     32\n",
-       " 3      8\n",
+       " 1    213\n",
+       "-1    173\n",
+       " 0     49\n",
        " 2      5\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 290,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dbscan2 = DBSCAN(eps=0.5, min_samples=5)\n",
+    "dbscan2 = DBSCAN(eps=0.54, min_samples=5)\n",
     "predicted_labels2 = dbscan2.fit_predict(dataset_scaled)\n",
     "\n",
     "dataset['Cluster'] = predicted_labels2\n",
@@ -663,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 291,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-16T16:34:17.418940700Z",
@@ -676,13 +679,13 @@
      "output_type": "stream",
      "text": [
       "--------Internal--------\n",
-      "Silhouette Score: 0.4978742250035533\n",
-      "Davies-Bouldin Index: 1.7444505952841909\n",
+      "Silhouette Score: 0.5422216966853809\n",
+      "Davies-Bouldin Index: 1.7530028843465648\n",
       "--------External--------\n",
-      "Adjusted Rand Index: -0.015591678977594177\n",
-      "Homogeneity: 0.01414234364976026\n",
-      "Completeness: 0.010698113062642942\n",
-      "V-Measure: 0.012181450050420465\n"
+      "Adjusted Rand Index: -0.02103289824810022\n",
+      "Homogeneity: 0.01157349123672025\n",
+      "Completeness: 0.00892579236779171\n",
+      "V-Measure: 0.01007865267317777\n"
      ]
     }
    ],
@@ -712,12 +715,25 @@
     "\n",
     "\n",
     "### The results\n",
-    "\n",
+    "Overall the results are not impressive. To be optimistic, some could call them mediocre, by looking at the internal results. \n",
     "\n",
     "#### The internal\n",
+    "The 'best' internal results from my model. \n",
     "\n",
+    "Silhouette Score: 0.5422216966853809\n",
+    "Davies-Bouldin Index: 1.7530028843465648\n",
     "\n",
-    "#### The external"
+    "but can be misleading due to the amount of noise in the model.\n",
+    "\n",
+    "#### The external\n",
+    "\n",
+    "The difference in values are so marginally small that we can conclude that its insignificant.\n",
+    "\n",
+    "They are all pretty low which indicates that they are all bad. \n",
+    "\n",
+    "### Worth noting\n",
+    "\n",
+    "There is a lack of pre processing done on the dataset to try out different solutions to produce better results."
    ]
   },
   {
@@ -726,7 +742,7 @@
    "source": [
     "# Conclusion\n",
     "\n",
-    "\n",
+    "The DBScan has the better scores, however I am not convinced that its the better clustering algorithm because of the lack of testing, tuning and exploring of the dataset. \n",
     "\n",
     "## Reflections\n",
     "\n",
@@ -739,7 +755,8 @@
    "metadata": {},
    "source": [
     "### Possible improvements\n",
-    "- Include more plots/graphs/visuals along explanations \n",
+    "- Include more plots/graphs/visuals along explanations\n",
+    "- More explanations with the results, and what they mean for the model performance. \n",
     "- Add more insight in noise with the DBScan"
    ]
   }
