--- a/Clustering_of_Wholesale_Customers.ipynb
+++ b/Clustering_of_Wholesale_Customers.ipynb
@@ -796,7 +796,7 @@
    ],
    "source": [
     "agglomerate_model = AgglomerativeClustering()\n",
-    "agglomerate_model.fit(dataset)"
+    "agglomerate_model.fit(dataset)\n"
    ],
    "metadata": {
     "collapsed": false,
