--- a/Clustering_of_Travel_Reviews.ipynb
+++ b/Clustering_of_Travel_Reviews.ipynb
@@ -1185,7 +1185,7 @@
     "\n",
     "The way the results have been formed has been nothing more than suboptimal. The reason for this is that the dataset is not optimal for finding clusters.\n",
     "\n",
-    "The dataset has been tested by doing so much pre proccessing that the data is to normalized/reduced. This leads to the results not being representative to the real data, but instead data that has been modified to \"look prettier\". Which goes away from the purpose of creating the models.\n",
+    "The dataset has been tested by doing so much pre proccessing that the data is too normalized/reduced. This leads to the results not being representative to the real data, but instead data that has been modified to \"look prettier\". Which goes away from the purpose of creating the models.\n",
     "\n",
     "The different tunings has show little to no difference in the result. Which leads to the possibilty of there not being a good way to create clusters for this dataset.\n",
     "\n",
