--- a/Clustering_of_Wholesale_Customers.ipynb
+++ b/Clustering_of_Wholesale_Customers.ipynb
@@ -29,7 +29,7 @@
     "  \n",
     "- #### What are the targets? \n",
     "\n",
-    "The target is the Region, which is customer region, either Lisbon, Porto or Other(Nominal)\n"
+    "The target is the Region, which is customer region, either Lisbon, Porto or other\n"
    ]
   },
   {
